--- a/pib.css
+++ b/pib.css
@@ -50,6 +50,7 @@ body
     margin: 0px;
     padding: 0px;
     position: fixed;
+    top:0px;
     left:-200px;
     width: 200px;
     height: 100%;
